# my-events-back

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
app/api/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: events.py  registrations.py  session.py  users.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/database/: connection.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2aef740943b1_create_session_table.py  86a722a315d5_create_user_table.py  8c94663c935b_create_user_event_table.py  c4892088def7_create_user_event_table.py  d69fac703615_create_registrations.py  fe4b6cdabe04_add_image.py
app/models/: base.py  envent.py  registration.py  session.py  user.py
app/repositories/: base.py  event_repository.py  registration.py  session_repository.py  user_repository.py
app/schemas/: event.py  registration.py  session.py  user.py
app/tests/: conftest.py
app/tests/functional/: test_users_api.py
app/tests/unit/use_cases/: test_create_user.py
app/use_cases/event/: create_event.py  delete_event.py  get_event.py  update_event.py
app/use_cases/registrations/: get_user_event_registrations.py  get_user_registrations.py  register_for_events.py
app/use_cases/session/: create_session.py  delete_session.py  get_session.py
app/use_cases/user/: create_user.py  get_user.py  login_user.py
